# json-validator

./: .editorconfig  CONTRIBUTORS.md  README.md
python/: .gitignore  README.md  USAGE.md  example.py  pyproject.toml  pytest.ini
python/json_validator/: __init__.py  __main__.py  validator.py
python/tests/: __init__.py  conftest.py  test_cli.py  test_validator.py
simulated-lake/: readme.md
simulated-lake/spec/: simplified-ds-6.0.yaml
